[package]
authors = ["antbern <40672068+antbern@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "dsaclk"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.13"
# cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
embedded-hal = "0.2.4"

#[dependencies.stm32f4]
#version = "0.13.0"
#features = ["stm32f401", "rt"]

[dependencies.stm32f4xx-hal]
version = "0.9"
features = ["stm32f401", "rt", "sdio"] # replace the model of your microcontroller here

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# this lets you use `cargo fix`!
[[bin]]
name = "dsaclk"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

# Set the default for dependencies.
[profile.dev.package."*"]
# Full optimization for dependencies
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in development mode.
opt-level = 1